<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (C) 2015 The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin" android:weightSum="1">

        <EditText
                android:id="@+id/collection_title_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/title_hint"
                android:maxLines="1"
                android:textSize="@dimen/normal_text"
                android:focusableInTouchMode="true"
                android:text=""
                android:textAppearance="@style/TextAppearance.AppCompat.Title"/>

        <EditText
                android:id="@+id/collection_description_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="400"
                android:textSize="@dimen/normal_text"
                android:background="@null"
                android:hint="@string/description_hint"
                android:layout_marginBottom="@dimen/activity_horizontal_margin"
                android:text=""/>

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/append_notes_to_collection"
                android:textSize="@dimen/header"
                android:textColor="@color/colorAccent"
                android:textStyle="bold"/>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            <ListView
                    android:id="@+id/notes_list"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:dividerHeight="2dp"/>

            <TextView
                    android:id="@+id/empty_notes_list_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:text="@string/empty_list"/>
        </LinearLayout>
</LinearLayout>

