<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:orientation="vertical"
                  android:layout_marginBottom="@dimen/activity_horizontal_margin">

        <link.fls.swipestack.SwipeStack
                android:id="@+id/swipe_stack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:foregroundGravity="left"
                android:padding="@dimen/activity_horizontal_margin"
                android:visibility="visible"
                app:allowed_swipe_directions="both"
                app:stack_rotation="2"
                app:stack_size="2"
                app:swipe_opacity="0.7"/>

        <Button
                android:id="@+id/refresh_cards_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/refresh"
                android:visibility="gone"/>
    </LinearLayout>

    <RelativeLayout
            android:id="@+id/linear_layout_bottom_sheet"
            android:layout_width="match_parent"
            android:layout_height="330dp"
            app:behavior_peekHeight="50dp"
            app:behavior_hideable="true"
            app:layout_behavior="android.support.design.widget.BottomSheetBehavior"
            android:elevation="@dimen/list_item_padding"
            android:background="@android:color/white">

        <LinearLayout
                android:id="@+id/header_sheet_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/bottom_sheet"
                android:orientation="horizontal">

            <TextView
                    android:id="@+id/text_view_sheet_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/reading_timer_label"
                    android:textSize="14sp"
                    android:textColor="@android:color/white"
                    android:padding="@dimen/activity_vertical_margin"
                    android:typeface="monospace"/>

            <TextView
                    android:id="@+id/timer_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/default_timer_time_label"
                    android:textSize="16sp"
                    android:textColor="@android:color/white"
                    android:paddingStart="@dimen/activity_horizontal_margin"
                    android:paddingEnd="@dimen/activity_vertical_margin"
                    android:typeface="monospace"/>

        </LinearLayout>

        <com.readingcards.util.CircleTimerView
                android:id="@+id/circle_timer_view"
                android:padding="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:layout_width="220dp"
                android:layout_height="220dp"
                android:layout_centerInParent="true"
                android:layout_below="@id/header_sheet_layout"
                android:layout_gravity="center"/>

        <Button
                android:id="@+id/cancel_timer_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reset_timer"
                android:layout_alignParentBottom="true"
                android:visibility="visible"
                android:layout_marginBottom="@dimen/activity_horizontal_margin"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:background="@drawable/list_completed_touch_feedback"
                android:layout_below="@id/circle_timer_view"
                />
    </RelativeLayout>

</android.support.design.widget.CoordinatorLayout>